<resources>
    <string name="app_name">Generator</string>
    <string name="txt_splash_screen">Generator</string>
    <string name="txt_hint_code">Enter your code</string>
    <string name="txt_code">Code</string>
    <string name="generate">Generate</string>
    <string name="txt_generate">Click on generate to see a number</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_bg">Log In!</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_welcome_back">Welcome back,</string>
    <string name="txt_hello">Hello,</string>
    <string name="txt_sign_up_bg">Sign Up!</string>
    <string name="txt_email">Email</string>
    <string name="txt_name">Name</string>
    <string name="txt_hint_name">Enter your name</string>
    <string name="txt_password">Password</string>
    <string name="txt_hint_email">Enter your email</string>
    <string name="txt_hint_password">Enter your password</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_if_not_sign_up">If you do not have an account</string>
    <string name="txt_if_sign_in">If you do have an account</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>