<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:soundEffectsEnabled="false"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.number.generator.GradientTextView
            android:id="@+id/txt_generator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kaushan_script"
            android:gravity="center"
            android:text="@string/txt_splash_screen"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="60sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_generator"
            android:textColorHint="@color/grey"
            android:layout_marginTop="60dp"
            android:theme="@style/CustomEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/txt_hint_code">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingVertical="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_input_code"
            android:text="This code is not valid"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark" />


        <FrameLayout
            android:layout_below="@id/txt_input_code"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_code_disabled"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                app:cornerRadius="30dp"
                android:backgroundTint="@color/lightGrey"
                android:text="@string/txt_login"
                android:backgroundTintMode="add"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:paddingHorizontal="60dp"
                android:textAllCaps="false"
                android:checkable="false"
                android:visibility="visible"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_code"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_blue"
                android:backgroundTintMode="add"
                android:paddingHorizontal="60dp"
                android:text="@string/txt_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:backgroundTint="@null"
                app:cornerRadius="8dp" />

            <include
                android:id="@+id/prog_btn_code"
                layout="@layout/pogress_btn"
                android:layout_marginTop="54dp"
                android:visibility="gone"
                android:layout_width="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>